# yabr

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  yabr.1
.github/workflows/: build.yml
include/: args.h  config.h  path.h  platform.h  sort.h  tasks.h  temp.h  ui.h
src/: args.cpp  main.cpp  path.cpp  sort.cpp  tasks.cpp  temp.cpp  ui.cpp
